# pdfremaker

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
output/00_R8/: 00_R8_NEO.txt  00_R8_OG.txt  00_R8_SORTED.txt
output/06R6/: 06R6_NEO.txt  06R6_OG.txt  06R6_SORTED.txt
output/2024_WEB/: 2024_WEB_NEO.txt  2024_WEB_OG.txt  2024_WEB_SORTED.txt
output/25-5kaisetsu/: 25-5kaisetsu_NEO.txt  25-5kaisetsu_OG.txt  25-5kaisetsu_SORTED.txt
output/3/: 3_NEO.txt  3_OG.txt  3_SORTED.txt
output/49_360/: 49_360_NEO.txt  49_360_OG.txt  49_360_SORTED.txt
output/5/: 5_NEO.txt  5_OG.txt  5_SORTED.txt
output/6_/: 6__NEO.txt  6__OG.txt  6__SORTED.txt
output/COMBINED_1/: COMBINED_1_NEO.txt  COMBINED_1_OG.txt  COMBINED_1_SORTED.txt
output/No.1_/: No.1__NEO.txt  No.1__OG.txt  No.1__SORTED.txt
output/example/: example_NEO.txt  example_OG.txt  example_SORTED.txt
output/pdf/: pdf_NEO.txt  pdf_OG.txt  pdf_SORTED.txt
output/pdf_recreated/: pdf_recreated_NEO.txt  pdf_recreated_OG.txt  pdf_recreated_SORTED.txt
output/pdf_recreated_12/: pdf_recreated_12_NEO.txt  pdf_recreated_12_OG.txt  pdf_recreated_12_SORTED.txt
output/pdf_recreated_14/: pdf_recreated_14_NEO.txt  pdf_recreated_14_OG.txt  pdf_recreated_14_SORTED.txt
output/pdf_recreated_15/: pdf_recreated_15_NEO.txt  pdf_recreated_15_OG.txt  pdf_recreated_15_SORTED.txt
output/pdf_recreated_16/: pdf_recreated_16_NEO.txt  pdf_recreated_16_OG.txt  pdf_recreated_16_SORTED.txt
templates/: base.html  edit.html  logs.html  philosophy.html  result.html  upload.html
uploads/: pdf
(+21 files in other folders)
