[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.1.0",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.2",
    "reportlab>=4.4.4",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
]
